chore: login routerefactor

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-signin-client_id"
+      content="894247852744-tbvg5jfskdlkcnr1enm8qv6ona1p9ul1.apps.googleusercontent.com"
+    />
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hangout</title>
@@ -9,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
